--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     
 </head>
 <body>
+    <div>
     <ul>
         <li><a href="Lec1.html">Лекция 1</a></li>
         <li><a href="Lec2.html">Лекция 2</a></li>
@@ -19,5 +20,6 @@
         <li><a href="Lec8.html">Лекция 8</a></li>
         <li><a href="Lec9.html">Лекция 9</a></li>
     </ul>
+</div>
 </body>
 </html>
