--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    
+    <style>
+        p{
+ color:pink;
+        }
+    </style>
 </head>
 <body>
     <div>
     <ul>
-        <li><a href="Lec1.html">Лекция 1</a></li>
+        <p style="color:purple"><li><a href="Lec1.html">Лекция 1</a></li></p>
         <li><a href="Lec2.html">Лекция 2</a></li>
         <li><a href="Lec3.html">Лекция 3</a></li>
         <li><a href="Lec4.html">Лекция 4</a></li>
