--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <style>
-        p{
+        h2{
  color:pink;
         }
     </style>
@@ -14,8 +14,8 @@
 <body>
     <div>
     <ul>
-        <p style="color:purple"><li><a href="Lec1.html">Лекция 1</a></li></p>
-        <li><a href="Lec2.html">Лекция 2</a></li>
+        <h2 style="color:whitesmoke"><li>Лекция 1</li></h2>
+        <li><a href="Lec1.html">Лекция 2</a></li>
         <li><a href="Lec3.html">Лекция 3</a></li>
         <li><a href="Lec4.html">Лекция 4</a></li>
         <li><a href="Lec5.html">Лекция 5</a></li>
